--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, macOS-latest]
-        java: [8, 11]
+        java: [8, 11, 17]
       fail-fast: false
-      max-parallel: 4
+      max-parallel: 8
     name: Test JDK ${{ matrix.java }}, ${{ matrix.os }}
 
     steps:
