--- a/fastjson1_compatible/pom.xml
+++ b/fastjson1_compatible/pom.xml
@@ -512,4 +512,36 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>add-java-open-options-for-jdk16+</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <!--
+                Maven Surefire Plugin – surefire:test
+                    https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#argLine
+                Append the value of argLine param in maven-surefire-plugin
+                    https://stackoverflow.com/questions/46489455
+            -->
+            <properties>
+                <argLine>
+                    <!--
+                        try to fix error:
+                        Failed to execute goal org.apache.maven.plugins:maven-compiler-plugin:testCompile (default-testCompile) on project fastjson:
+                        Fatal error compiling: java.lang.ExceptionInInitializerError:
+                        Unable to make field private com.sun.tools.javac.processing.JavacProcessingEnvironment$DiscoveredProcessors
+                        com.sun.tools.javac.processing.JavacProcessingEnvironment.discoveredProcs accessible:
+                        module jdk.compiler does not "opens com.sun.tools.javac.processing" to unnamed module @57254243
+                    -->
+                    --illegal-access=permit
+                    --add-modules=jdk.unsupported
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                    --add-opens java.base/jdk.compiler=ALL-UNNAMED
+                </argLine>
+            </properties>
+        </profile>
+    </profiles>
 </project>
